modelling files inside sharedFolder

--- a/Data_Pre_Processing/EDA/Documentation_2.ipynb
+++ b/Data_Pre_Processing/EDA/Documentation_2.ipynb
@@ -618,7 +618,10 @@
   {
    "cell_type": "markdown",
    "id": "6fc0c97c-0a6f-4cf2-8d32-a0f0b87423c6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### MS_Rating"
    ]
@@ -673,7 +676,10 @@
   {
    "cell_type": "markdown",
    "id": "7cc7f640-b010-4b26-9152-1b0f6e4c96b3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### Buttons"
    ]
@@ -846,7 +852,10 @@
   {
    "cell_type": "markdown",
    "id": "2019ced2-47f4-4627-af8a-e188fbb5f278",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### Index Trigger"
    ]
@@ -906,7 +915,10 @@
   {
    "cell_type": "markdown",
    "id": "4bfd1974-75a3-47ad-8a85-b46966be9078",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### Hand Trigger"
    ]
@@ -1126,7 +1138,10 @@
   {
    "cell_type": "markdown",
    "id": "9793feb5-7852-4700-baa8-3cd322d7d0f8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### EyeGaze and head"
    ]
