--- a/Data_Pre_Processing/Econ/Econ.ipynb
+++ b/Data_Pre_Processing/Econ/Econ.ipynb
@@ -19114,7 +19114,6 @@
    "cell_type": "markdown",
    "id": "2ea2369d-4b74-41da-8292-367572ab9616",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -19977,7 +19976,9 @@
    "id": "68908a76-aa28-4f78-9346-88b6f2e9e9d8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.listdir()"
+   ]
   }
  ],
  "metadata": {
