--- a/Data_Extraction/Extraction.ipynb
+++ b/Data_Extraction/Extraction.ipynb
@@ -100,7 +100,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "https://drive.google.com/file/d/1cKk0bwvTHwIDzt6ykolUEgdgIUx82gpo/view?usp=drive_link"
+    "https://drive.google.com/file/d/1cKk0bwvTHwIDzt6ykolUEgdgIUx82gpo/view?usp=drive_link\n",
+    "https://drive.google.com/file/d/1nTgL51r24vx4hguXur87pVFcFQj43gCp/view?usp=sharing\n",
+    "https://drive.google.com/file/d/10wgqwCyL9Nz9oanU66mdqomizkaSCslx/view?usp=sharing"
    ]
   },
   {
@@ -160,7 +162,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "4424f6f3-a35f-4175-b7f3-1f54224d122c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files extracted to /home/sharedFolder/NewDump\n"
+     ]
+    }
+   ],
+   "source": [
+    "import zipfile\n",
+    "import os\n",
+    "   # Replace 'your_file.zip' with the path to your zip file\n",
+    "file_path = '/home/sharedFolder/NewDump/dump.zip'\n",
+    "# Replace 'extracted_folder' with the directory where you want to extract the files\n",
+    "extract_path = '/home/sharedFolder/NewDump'\n",
+    "\n",
+    "# Create the extraction directory if it doesn't exist\n",
+    "os.makedirs(extract_path, exist_ok=True)\n",
+    "\n",
+    "with zipfile.ZipFile(file_path, 'r') as zip_ref:\n",
+    "    zip_ref.extractall(extract_path)\n",
+    "\n",
+    "print(f\"Files extracted to {extract_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3b2bf6eb-119f-4db2-927e-3335fbd50568",
    "metadata": {},
    "outputs": [
@@ -169,18 +202,18 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "From: https://drive.google.com/uc?id=1VB6siJOIpvQYX7KLG8wfqCpuGsw8Xe6l\n",
-      "To: /home/sharedFolder/NewDump/tmp.tar.xz\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 122M/122M [00:10<00:00, 11.8MB/s]\n"
+      "From: https://drive.google.com/uc?id=10wgqwCyL9Nz9oanU66mdqomizkaSCslx\n",
+      "To: /home/sharedFolder/NewDump/dump.zip\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████| 774M/774M [01:09<00:00, 11.2MB/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'/home/sharedFolder/NewDump/tmp.tar.xz'"
+       "'/home/sharedFolder/NewDump/dump.zip'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,8 +221,8 @@
    "source": [
     "import gdown\n",
     "\n",
-    "url = 'https://drive.google.com/uc?id=1VB6siJOIpvQYX7KLG8wfqCpuGsw8Xe6l'\n",
-    "output = '/home/sharedFolder/NewDump/tmp.tar.xz'\n",
+    "url = 'https://drive.google.com/uc?id=10wgqwCyL9Nz9oanU66mdqomizkaSCslx'\n",
+    "output = '/home/sharedFolder/NewDump/dump.zip'\n",
     "gdown.download(url, output, quiet=False)\n",
     "\n",
     "# https://drive.google.com/file/d/1VB6siJOIpvQYX7KLG8wfqCpuGsw8Xe6l/view?usp=drive_link"
